src/parser/snapshots/proto__parser__pparser__parser@arrays.pr.snap
---
source: src/parser/pparser.rs
expression: result
input_file: src/parser/parser_inputs/arrays.pr
---
code_str_repr:
  - fn main() int
  - "a :: [1, 2, 3]"
  - "b : [int, _] = a"
  - "c : [int, 3] = b"
  - "d : [[int, 3], 2] = [a, b]"
  - "e : [bool, 3] = [false, true, true]"
  - "f : bool = e[2]"
  - "g :: a[0]"
  - ""
lexer_errors: []
parser_errors: []
parse_warning: []

