src/parser/snapshots/proto__parser__pparser__parser@code_blocks.pr.snap
---
source: src/parser/pparser.rs
expression: result
input_file: src/parser/parser_inputs/code_blocks.pr
---
pcode:
  - "Constant main : <infer> : fn () void "
  - Block
  - "Constant a : <infer> : 4"
  - ""
  - Block
  - "Variable b : <infer> = a"
  - ""
  - Block
  - EndBlock
  - EndBlock
  - EndBlock
lexer_errors: []
parser_errors: []
parse_warning: []

