src/parser/snapshots/proto__parser__pparser__parser@consts_and_vars.pr.snap
---
source: src/parser/pparser.rs
expression: result
input_file: src/parser/parser_inputs/consts_and_vars.pr
---
code_str_repr:
  - "c := false"
  - "e : uint = 0"
  - "a : i8 : 32"
  - fn main() void
  - "b := a"
  - "d :: !c"
  - ""
lexer_errors: []
parser_errors: []
parse_warning: []

