src/parser/snapshots/proto__parser__pparser__parser@fn_calls.pr.snap
---
source: src/parser/pparser.rs
expression: result
input_file: src/parser/parser_inputs/fn_calls.pr
---
pcode:
  - "Variable a : <infer> = add(1, 2)"
  - "ExprIns sub(420, 300)"
  - "ExprIns sub(add(1, 2), 3)"
lexer_errors: []
parser_errors: []
parse_warning: []

