src/parser/snapshots/proto__parser__pparser__parser@loops.pr.snap
---
source: src/parser/pparser.rs
expression: result
input_file: src/parser/parser_inputs/loops.pr
---
code_str_repr:
  - "// fn main() void {"
  - "//}"
  - "//fn inf_loop() void {"
  - //mut sum = 0;
  - //mut counter = 0;
  - "//loop {"
  - //sum = sum + counter;
  - //counter = counter + 1;
  - "//}"
  - "//}"
  - "//fn while_loop() void {"
  - //mut sum = 0;
  - //mut counter = 0;
  - "//while counter < 10 {"
  - //sum = sum + counter;
  - "//}"
  - "//}"
  - "//fn iter_loop() void {"
  - //    mut sum = 0;
  - //    todo when iterators can be implemented as traits
  - "//    foreach counter in 0..10 {"
  - //        sum = sum + counter;
  - "//    }"
  - "//}"
lexer_errors: []
parser_errors: []
parse_warning: []

